# image-analysis

./: LICENSE  README.md
ex1/: Aia1.cpp  Aia1.h  CMakeLists.txt  main.cpp
ex2/: main.cpp  run.sh
ex2/ex2/: Aia2.cpp  CMakeLists.txt
ex3/: Aia3.cpp
ex4/: Aia4.cpp  CMakeLists.txt
